--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,7 @@
             "AdobeStock\\Api\\Test\\": "test"
         }
     },
-    "repositories": [
-        {
+    "repositories": [{
             "type": "vcs",
             "url": "git@git.corp.adobe.com:AdobeStock/phpcs-psr2-stock.git"
         }
