Environment should default to Prod

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "astock/stock-api-libphp",
     "description": "Adobe Stock API library",
-    "license": "proprietary",
+    "license": "Apache-2.0",
     "require": {
         "php": "~7.1",
         "guzzlehttp/guzzle": "~6.0",
@@ -22,20 +22,13 @@
             "AdobeStock\\Api\\Test\\": "test"
         }
     },
-    "repositories": [{
-            "type": "vcs",
-            "url": "git@git.corp.adobe.com:AdobeStock/phpcs-psr2-stock.git"
-        }
-    ],
     "config": {
         "bin-dir": "vendor/bin/"
     },
     "scripts": {
         "check": [
-            "@lint",
             "@test"
         ],
-        "lint": "vendor/bin/phpcs-psr2-stock src test",
         "test": "vendor/bin/phpunit",
         "test-coverage": "vendor/bin/phpunit --coverage-html data/clover"
     }
