STK-21882: Add build step in php sdk & resolved compilation issues

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "astock/stock-api-libphp",
     "description": "Adobe Stock API library",
-    "license": "proprietary",
+    "license": "Apache 2.0",
     "require": {
         "php": "~7.1",
         "guzzlehttp/guzzle": "~6.0",
