--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "~2.8",
-        "phpunit/phpunit": "~6.0",
+        "phpunit/phpunit": "~6.0||~7.0||~8.0",
         "mockery/mockery": "^0.9.9"
     },
     "autoload": {
